Fix button spacing

--- a/styles/plugin.module.css
+++ b/styles/plugin.module.css
@@ -51,7 +51,7 @@
 }
 
 .button {
-  margin-right: 1rem;
+  margin-right: .5rem;
 }
 
 .codeBox {
